kubernetes/services/base/ingress-edge-server-ngrok.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-ngrok
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer-prod"
spec:
  tls:
  - hosts:
    - 22d6ac02c13d.ngrok.io
    secretName: tls-ngrok-letsencrypt-certificate
  rules:
  - host: 22d6ac02c13d.ngrok.io
    http:
      paths:
      - path: /oauth
        backend:
          serviceName: auth-server
          servicePort: 80
      - path: /product-composite
        backend:
          serviceName: product-composite
          servicePort: 80        
      - path: /actuator/health
        backend:
          serviceName: product-composite
          servicePort: 80
